Fix further alignment issues

--- a/Valour/Client/wwwroot/css/app.css
+++ b/Valour/Client/wwwroot/css/app.css
@@ -97,7 +97,7 @@ body {
 .message {
     width: 100%;
     max-width: 100%;
-    padding-bottom: 4px;
+    padding-bottom: 0px;
     padding-left: 4px;
     position: relative;
     min-height: 51.333px;
@@ -113,6 +113,7 @@ body {
     max-width: 100%;
     margin-top: 0px;
     margin-bottom: 0px;
+    padding-bottom: 0px;
     padding-left: 4px;
     position: relative;
 }
